peac_dev/force-app/main/default/objects/Webservice_Field__c/fields/RunNewCustomerFlow__c.field-meta.xml
<CustomField>
    <fullName>RunNewCustomerFlow__c</fullName>
    <label>RunNewCustomerFlow</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>