peac_dev/force-app/main/default/objects/Webservice_Field__c/fields/Stored_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Stored_Procedure__c</fullName>
    <label>Stored Procedure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>getGdsGetCustCreditExpLoan</fullName>
            </value>
            <value>
                <fullName>getGDSFraudFlags</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>