peac_dev/force-app/main/default/objects/Webservice_Field__c/fields/Total_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Total_Exposure__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Total Exposure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>