peac_dev/force-app/main/default/objects/Webservice_Field__c/fields/UD_VER_TAXID__c.field-meta.xml
<CustomField>
    <fullName>UD_VER_TAXID__c</fullName>
    <label>UD_VER_TAXID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>